--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 	<header class="header">
 		<img class="header-image" src="assets/moneyheist.png" alt="moneyheist">
 		<nav class="navi-bar">
-			<div class="logo-buttons">
+			<div class="logo-button">
 				<a href="index.html" class="header-home">
 					<img src="assets/netflix-logo.png">
 				</a>
 			</div>
-			<div class="logo-buttons">
+			<div class="profile-button">
 				<a href="#">
 					<img src="assets/profile-picture.png">
 				</a>
+				<div class="tooltip">Profile</div>
 			</div>
 		</nav>
 		<section class="detail-info">
